--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<wicket.version>6.8.0</wicket.version>
 		<jetty.version>7.6.3.v20120416</jetty.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.8.0</scala.version>
+        <scala.version>2.10.2</scala.version>
 	</properties>
 	<dependencies>
 		<!--  WICKET DEPENDENCIES -->
@@ -83,8 +83,8 @@
         <!-- scala test Test -->
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs_${scala.version}</artifactId>
-            <version>1.6.5</version>
+            <artifactId>specs_2.10</artifactId>
+            <version>1.6.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
