--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.r.scalademo.wicket</groupId>
-	<artifactId>scalawicket</artifactId>
+	<groupId>edu.unq.uis.planificador</groupId>
+	<artifactId>planificadorwicket</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-		<!-- TODO project name  -->
-	<name>quickstart</name>
+	<name>Planificador Wicket</name>
 	<description></description>
 	<!--
 		<organization>
@@ -80,13 +79,6 @@
             <version>${scala.version}</version>
         </dependency>
 
-        <!-- scala test Test -->
-        <dependency>
-            <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs_2.10</artifactId>
-            <version>1.6.9</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest</artifactId>
@@ -109,7 +101,33 @@
 			<version>${jetty.version}</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+
+        <!-- BOOTSTRAP-->
+        <dependency>
+            <groupId>de.agilecoders.wicket</groupId>
+            <artifactId>wicket-bootstrap-core</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.agilecoders.wicket</groupId>
+            <artifactId>wicket-bootstrap-extensions</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.agilecoders.wicket</groupId>
+            <artifactId>wicket-bootstrap-themes</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ro.fortsoft.wicket.jade</groupId>
+            <artifactId>wicket-jade</artifactId>
+            <version>0.2</version>
+        </dependency>
+
+    </dependencies>
 	<build>
 		<resources>
 			<resource>
