--- a/pom.xml
+++ b/pom.xml
@@ -121,11 +121,11 @@
             <version>0.9.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>ro.fortsoft.wicket.jade</groupId>
-            <artifactId>wicket-jade</artifactId>
-            <version>0.2</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>ro.fortsoft.wicket.jade</groupId>-->
+            <!--<artifactId>wicket-jade</artifactId>-->
+            <!--<version>0.2</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 	<build>
