Dejo funcionando la dependencia con el proyecto de dominio

--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
       -->
 
     <dependency>
-      <groupId>default</groupId>
-        <artifactId>unq-ui-planificador_2.10</artifactId>
-        <version>1.0</version>
+      <groupId>ar.edu.unq.ui</groupId>
+      <artifactId>planificador-domain_2.10</artifactId>
+      <version>1.0</version>
     </dependency>
 
     <!-- LOGGING DEPENDENCIES - LOG4J -->
